--- a/build.gradle
+++ b/build.gradle
@@ -23,6 +23,10 @@ ext {
 	set('snippetsDir', file("build/generated-snippets"))
 }
 
+bootJar {
+	destinationDirectory= file('target/')
+}
+
 dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
 	implementation 'org.springframework.boot:spring-boot-starter-jdbc'
